Update footer with corrected name and course format

--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
 
         <footer>
             <p><strong>삼양식품 기업 분석 보고서</strong></p>
-            <p>국제경영 과목 | 보고자: Zhao Jia | 학번: 202480251 | 2025</p>
+            <p>국제경영학 | 보고자: ZHAO JIA | 학번: 202480251</p>
             <p style="margin-top: 20px; font-size: 0.9em; color: #999;">본 보고서는 학술 연구 목적입니다</p>
         </footer>
     </div>
