--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                     <div class="subtitle">삼양식품 (Samyang Foods)</div>
                 </div>
             </div>
-            <div class="author">국제경영 | 보고자: Zhao Jia | 학번: 202480251</div>
+            <div class="author">국제경영학 | 보고자: ZHAO JIA | 학번: 202480251</div>
         </header>
 
         <nav>
